# AI-Powered-Assistant-for-Churn-Prediction

./: .gitignore  README.md  api.py  chat_tester.html  chatbot_pipeline.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  streamlit_app.py  technical_report.docx
assets/: encode_features.py
assets/model/: feature_names.json
