[project]
name = "ai-powered-assistant-for-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13" 
dependencies = [
    "catboost>=1.2.10",
    "fastapi>=0.129.0",
    "groq>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=2.2.0,<3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.41.0",
    "xgboost>=3.2.0",
    "streamlit==1.54.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
